k8s/longhorn/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-require-admin-auth@kubernetescrd

spec:
  rules:
    - host: longhorn.slashdev.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
